<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fitsSystemWindows="true"
    tools:context=".OptionsRealTimeDataActivity">

    <!-- Título de la actividad -->
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/title_options_real_time"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Texto con la placa del vehículo -->
    <TextView
        android:id="@+id/vehiclePlateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/plate_string"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/vehiclePlateValueTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <!-- Texto con el valor de la placa del vehículo -->
    <TextView
        android:id="@+id/vehiclePlateValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:gravity="center"
        android:text="0"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/vehiclePlateTextView"
        app:layout_constraintTop_toTopOf="@+id/vehiclePlateTextView" />

    <!-- Texto con la velocidad actual del vehículo -->
    <TextView
        android:id="@+id/currentSpeedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/current_speed"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/currentSpeedValueTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vehiclePlateTextView"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <!-- Texto con el valor de la velocidad actual del vehículo -->
    <TextView
        android:id="@+id/currentSpeedValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:gravity="center"
        android:text="0"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/currentSpeedTextView"
        app:layout_constraintTop_toTopOf="@+id/currentSpeedTextView" />
    <!-- Texto con el tiempo de encendido del vehículo -->
    <TextView
        android:id="@+id/engineTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/time_on"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/engineTimeValueTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentSpeedTextView"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <!-- Texto con el valor del tiempo de encendido del vehículo -->
    <TextView
        android:id="@+id/engineTimeValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:gravity="center"
        android:text="0"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/engineTimeTextView"
        app:layout_constraintTop_toTopOf="@+id/engineTimeTextView" />

    <!-- Contenedor horizontal para gas y baterías -->
    <LinearLayout
        android:id="@+id/gasBatteryContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/engineTimeTextView">

        <!-- Ítem: Gas -->
        <LinearLayout
            android:id="@+id/gasItemLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edit_text_border"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/gas_status_item"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/gasImageView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_gas_icon"
                app:tint="@color/white" />
        </LinearLayout>

        <!-- Ítem: Baterías -->
        <LinearLayout
            android:id="@+id/batteryItemLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text_border"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/batteries_status_item"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/batteryImageView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_battery_power_icon"
                app:tint="@color/white" />
        </LinearLayout>
    </LinearLayout>

    <!-- Contenedor horizontal para neumáticos e incidentes -->
    <LinearLayout
        android:id="@+id/tireIncidentContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gasBatteryContainer">

        <!-- Ítem: Neumáticos -->
        <LinearLayout
            android:id="@+id/tireItemLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edit_text_border"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tires_status_item"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/tireImageView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_tire_icon"
                app:tint="@color/white" />
        </LinearLayout>

        <!-- Ítem: Registro de incidentes de impacto -->
        <LinearLayout
            android:id="@+id/incidentItemLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text_border"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/incident_log"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/incidentImageView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_warning_amber_24"
                app:tint="@color/white" />
        </LinearLayout>
    </LinearLayout>
    <!-- Botón para Volver -->
    <Button
        android:id="@+id/btnBack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Volver"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:padding="12dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
